--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,7 +31,11 @@ jobs:
       run: mvn -B package --file pom.xml
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
-spring.security.user.name=minhchan
-spring.security.user.password=123
+    - name: Distribute jar-war file # Gửi file .jar .war đi đâu, CD nhảy vào ...
+        run: mkdir staging && cp target/*.jar staging # tạo thư mục staging chứa file .jar .war sau khi build      
+     
+      - name: Make hyperlink to jar-war file # Tạo hyperlink để download build 
+        uses: actions/upload-artifact@v1
+        with:
+          name: 1.0-SNAPSHOT.jar # Bản build được đánh version 1.0-SNAPSHOT
+          path: staging
