--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,44 +1,40 @@
 name: CI with GitHub Actions using Maven and JUnit | © 2023 by minhchan
 
-# This workflow will build a Java project with Maven
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
 on:
   push:
-    branches: [ main ] # Lấy code từ nhánh main nếu có ai push code lên  
   pull_request:
-    branches: [ main ] # Lấy code từ nhánh main nếu có ai gửi pull request  
+    branches: [ main ]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
-jobs: # Những công việc dev làm thường ngày: lấy code, build, chạy test, đóng gói, gửi build...
-  # This workflow contains a single job called "build"
+jobs: 
+
   build:
-    # The type of runner that the job will run on
+
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Check-out repository # Lấy code từ kho thảy vào máy ảo của GitHub chuẩn bị build ở bước sau
+
+      - name: Check-out repository 
         uses: actions/checkout@v3
 
       - name: Set up JDK 17 
-        uses: actions/setup-java@v3 # Khai báo cần dùng JDK để build
+        uses: actions/setup-java@v3 
         with:
-          java-version: '17' # Khai báo sử dụng phiên bản JDK 18 để build
+          java-version: '17' 
           distribution: 'temurin'
           cache: maven
      
       - name: Build project with Maven
-        run: mvn -B package --file pom.xml # Quá trình build sẽ cần đến file cấu hình pom.xml
+        run: mvn -B package --file pom.xml
       
-      - name: Distribute jar-war file # Gửi file .jar .war đi đâu, CD nhảy vào ...
-        run: mkdir staging && cp target/*.jar staging # tạo thư mục staging chứa file .jar .war sau khi build      
+      - name: Distribute jar-war file 
+        run: mkdir staging && cp target/*.jar staging     
      
-      - name: Make hyperlink to jar-war file # Tạo hyperlink để download build 
+      - name: Make hyperlink to jar-war file 
         uses: actions/upload-artifact@v1
         with:
-          name: 1.0-SNAPSHOT.jar # Bản build được đánh version 1.0-SNAPSHOT
+          name: 1.0-SNAPSHOT.jar 
           path: staging
 
-# End of CI workflow file
+
