--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,7 +26,7 @@ jobs:
           cache: maven
      
       - name: Build project with Maven
-        run: mvn -B package --file /full/path/to/pom.xml
+        run: mvn -B package --file pom.xml
       
       - name: Distribute jar-war file 
         run: mkdir staging && cp target/*.jar staging     
