--- a/Backend/ShoesCustom/ShoesPee/ShoesPee/src/main/resources/application.properties
+++ b/Backend/ShoesCustom/ShoesPee/ShoesPee/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/shoepee
 
 spring.datasource.username=root
-#spring.datasource.password=9267e232
+spring.datasource.password=9267e232
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibrenate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.propeties.hibrenate.format_sql=true
