--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Build project with Maven
         run: mvn -B package --file Backend/ShoesCustom/ShoesPee/ShoesPee/pom.xml
       
-      - name: Distribute jar-war file 
-        run: mkdir staging && cp target/*.jar staging     
+      # - name: Distribute jar-war file 
+      #   run: mkdir staging && cp target/*.jar staging     
      
       - name: Make hyperlink to jar-war file 
         uses: actions/upload-artifact@v1
