--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,10 +31,10 @@ jobs:
       # - name: Distribute jar-war file 
       #   run: mkdir staging && cp target/*.jar staging     
      
-      - name: Make hyperlink to jar-war file 
-        uses: actions/upload-artifact@v1
-        with:
-          name: 1.0-SNAPSHOT.jar 
-          path: staging
+      # - name: Make hyperlink to jar-war file 
+      #   uses: actions/upload-artifact@v1
+      #   with:
+      #     name: 1.0-SNAPSHOT.jar 
+      #     path: staging
 
 
