--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-alice-carousel": "^2.7.1",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "three": "^0.157.0",
     "valtio": "^1.11.2",
@@ -48,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.6",
     "tailwindcss": "^3.3.3"
   }
 }
