--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,15 +11,20 @@
     "@mui/material": "^5.14.12",
     "@react-three/drei": "^9.87.0",
     "@react-three/fiber": "^8.14.4",
+    "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.7.1",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "three": "^0.157.0",
     "valtio": "^1.11.2",
     "web-vitals": "^2.1.4"
