--- a/.github/workflows/CI-BE.yml
+++ b/.github/workflows/CI-BE.yml
@@ -29,7 +29,7 @@ jobs:
         run: mvn -B package --file Backend/ShoesCustom/ShoesPee/ShoesPee/pom.xml
       
       # - name: Distribute jar-war file 
-      #   run: mkdir staging && cp target/*.jar staging     
+      #   run: mkdir staging && cp out/artifacts/shoe_stylise_jar/*.jar staging     
      
       # - name: Make hyperlink to jar-war file 
       #   uses: actions/upload-artifact@v1
