--- a/.github/workflows/CI-BE.yml
+++ b/.github/workflows/CI-BE.yml
@@ -28,13 +28,13 @@ jobs:
       - name: Build project with Maven
         run: mvn -B package --file Backend/ShoesCustom/ShoesPee/ShoesPee/pom.xml
       
-      # - name: Distribute jar-war file 
-      #   run: mkdir staging && cp out/artifacts/shoe_stylise_jar/*.jar staging     
+      - name: Distribute jar-war file 
+        run: mkdir staging && cp out/artifacts/shoe_stylise_jar/*.jar staging     
      
-      # - name: Make hyperlink to jar-war file 
-      #   uses: actions/upload-artifact@v1
-      #   with:
-      #     name: 1.0-SNAPSHOT.jar 
-      #     path: staging
+      - name: Make hyperlink to jar-war file 
+        uses: actions/upload-artifact@v1
+        with:
+          name: 1.0-SNAPSHOT.jar 
+          path: staging
 
 
