--- a/.github/workflows/CI-BE.yml
+++ b/.github/workflows/CI-BE.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Make hyperlink to jar-war file 
         uses: actions/upload-artifact@v1
         with:
-          name: 1.0-SNAPSHOT.jar 
+          name: shoe-stylise.jar
           path: staging
 
 
