--- a/Backend/ShoesCustom/ShoesPee/ShoesPee/src/main/resources/application.properties
+++ b/Backend/ShoesCustom/ShoesPee/ShoesPee/src/main/resources/application.properties
@@ -1,8 +1,13 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://shoespee.cv1mjmcgcifj.ap-southeast-1.rds.amazonaws.com:3306/shoepee
+spring.datasource.url=jdbc:mysql://30f17fda-ae60-4e6c-b9d1-d9188a32134e:3306/shoepee
 
 spring.datasource.username=shoepee
 spring.datasource.password=0333044220
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/shoepee
+#
+#spring.datasource.username=root
+#spring.datasource.password=9267e232
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #spring.jpa.hibrenate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
@@ -11,6 +16,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 #spring.security.user.name=minhchan
 #spring.security.user.password=123
-
+server.port=8080
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
 
 
