--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,8 +26,8 @@
     "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.16.0",
-    "react-rte": "^0.16.5",
     "react-scripts": "5.0.1",
     "three": "^0.157.0",
     "valtio": "^1.11.2",
