--- a/Backend/ShoesCustom/ShoesPee/ShoesPee/src/main/resources/application.properties
+++ b/Backend/ShoesCustom/ShoesPee/ShoesPee/src/main/resources/application.properties
@@ -5,10 +5,10 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.username=shoepee
 #spring.datasource.password=0333044220
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/shoepee
+spring.datasource.url=jdbc:mysql://shoespee.cv1mjmcgcifj.ap-southeast-1.rds.amazonaws.com/shoepee
 
-spring.datasource.username=root
-spring.datasource.password=9267e232
+spring.datasource.username=shoepee
+spring.datasource.password=0333044220
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #spring.jpa.hibrenate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
