--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,8 +21,10 @@
     "nth-check": "^2.1.1",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.7.1",
+    "react-apexcharts": "^1.4.1",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
