--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.5.1",
     "notistack": "^3.0.1",
     "nth-check": "^2.1.1",
+    "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.7.1",
     "react-apexcharts": "^1.4.1",
@@ -31,7 +32,7 @@
     "react-redux": "^8.1.3",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.16.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "three": "^0.157.0",
