--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@uiw/react-color-circle": "^1.4.3",
     "axios": "^1.5.1",
+    "formik": "^2.4.5",
     "notistack": "^3.0.1",
     "nth-check": "^2.1.1",
     "postcss": "^8.4.31",
