--- a/Backend/ShoesCustom/ShoesPee/ShoesPee/pom.xml
+++ b/Backend/ShoesCustom/ShoesPee/ShoesPee/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.ToDoiVar.ShoesPee</groupId>
-	<artifactId>demo</artifactId>
+	<artifactId>shoepee</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ShoesPee</name>
 	<description>Project service shoes</description>
