--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "@heroicons/react": "^2.0.18",
     "@mui/icons-material": "^5.14.12",
     "@mui/material": "^5.14.12",
+    "@mui/x-data-grid": "^6.17.0",
+    "@mui/x-data-grid-generator": "^6.17.0",
     "@react-three/drei": "^9.87.0",
     "@react-three/fiber": "^8.14.4",
     "@reduxjs/toolkit": "^1.9.7",
@@ -68,6 +70,7 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.6",
     "daisyui": "^3.9.3",
+    "source-map-loader": "^4.0.1",
     "tailwindcss": "^3.3.3"
   }
 }
