--- a/frontend/package.json
+++ b/frontend/package.json
@@ -69,7 +69,8 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.6",
-    "daisyui": "^3.9.3",
+    "@tailwindcss/typography": "^0.5.10",
+    "daisyui": "^3.9.4",
     "source-map-loader": "^4.0.1",
     "tailwindcss": "^3.3.3"
   }
