--- a/.github/workflows/CI-CD-BE.yml
+++ b/.github/workflows/CI-CD-BE.yml
@@ -37,12 +37,42 @@ jobs:
       #     name: 0.0.1-SNAPSHOT.jar  
       #     path: staging
       
+      # - name: Build & push Docker image
+      #   uses: mr-smithers-excellent/docker-build-push@v5
+      #   with:
+      #     image: minhchan/minhchan-shoepee
+      #     tags: latest
+      #     registry: docker.io
+      #     dockerfile: Dockerfile
+      #     username: ${{ secrets.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKER_PASSWORD }}
+
+    name: Build & push Docker image
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
       - name: Build & push Docker image
-        uses: mr-smithers-excellent/docker-build-push@v5
+        uses: docker/build-push-action@v2
         with:
-          image: minhchan/minhchan-shoepee
-          tags: latest
-          registry: docker.io
+          context: .
+          push: true
+          tags: minhchan/minhchan-shoepee:latest
+          platforms: linux/amd64,linux/arm64
+          builder: my-builder
           dockerfile: Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
