--- a/.github/workflows/CI-CD-BE.yml
+++ b/.github/workflows/CI-CD-BE.yml
@@ -47,35 +47,34 @@ jobs:
       #     username: ${{ secrets.DOCKER_USERNAME }}
       #     password: ${{ secrets.DOCKER_PASSWORD }}
 
-    name: Build & push Docker image
+     - name: Build & push Docker image
 
-on:
-  push:
-    branches:
-      - main
+      - on:
+        push:
+          branches:
+            - main
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
+      - jobs:
+        build:
+          runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+          steps:
+            - name: Checkout repository
+              uses: actions/checkout@v2
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v1
 
-      - name: Build & push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: minhchan/minhchan-shoepee:latest
-          platforms: linux/amd64,linux/arm64
-          builder: my-builder
-          dockerfile: Dockerfile
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
+            - name: Build & push Docker image
+              uses: docker/build-push-action@v2
+              with:
+                context: .
+                push: true
+                tags: minhchan/minhchan-shoepee:latest
+                platforms: linux/amd64,linux/arm64
+                builder: my-builder
+                dockerfile: Dockerfile
+                username: ${{ secrets.DOCKER_USERNAME }}
+                password: ${{ secrets.DOCKER_PASSWORD }}
 
 
