--- a/.github/workflows/CI-CD-BE.yml
+++ b/.github/workflows/CI-CD-BE.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/setup-java@v3 
         with:
           java-version: '20' 
-          distribution: 'temurin'
+          distribution: 'adopt'
           cache: maven
      
       - name: Build project with Maven
