--- a/.github/workflows/CI-CD-BE.yml
+++ b/.github/workflows/CI-CD-BE.yml
@@ -37,15 +37,15 @@ jobs:
       #     name: 0.0.1-SNAPSHOT.jar  
       #     path: staging
       
-      - name: Build & push Docker image
-        uses: mr-smithers-excellent/docker-build-push@v5
-        with:
-          image: minhchan/minhchan-shoepee
-          tags: latest
-          registry: registry-1.docker.io
-          dockerfile: Dockerfile
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+      # - name: Build & push Docker image
+      #   uses: mr-smithers-excellent/docker-build-push@v5
+      #   with:
+      #     image: minhchan/minhchan-shoepee
+      #     tags: latest
+      #     registry: registry-1.docker.io
+      #     dockerfile: Dockerfile
+      #     username: ${{ secrets.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKER_PASSWORD }}
 
 
   
