Update frontend code

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@mediapipe/tasks-vision": "^0.10.7",
     "@mui/icons-material": "^5.14.12",
     "@mui/material": "^5.14.12",
     "@mui/x-data-grid": "^6.17.0",
@@ -21,6 +22,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@uiw/react-color-circle": "^1.4.3",
     "axios": "^1.5.1",
+    "formik": "^2.4.5",
     "notistack": "^3.0.1",
     "nth-check": "^2.1.1",
     "postcss": "^8.4.31",
