--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,15 @@
 				</configuration>
 			</plugin>
 
+			 <plugin>
+        			<groupId>org.apache.maven.plugins</groupId>
+        			<artifactId>maven-war-plugin</artifactId>
+        			<version>3.1.0</version>
+        			<configuration>
+          				<failOnMissingWebXml>false</failOnMissingWebXml>
+        			</configuration>
+     			 </plugin>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
