--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,7 @@
                 </executions>
             </plugin>
 
-			<plugin>
+<!-- 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1.0</version>
@@ -122,7 +122,7 @@
 					<source>20</source>
 					<target>20</target>
 				</configuration>
-			</plugin>
+			</plugin> -->
 
 			 <plugin>
         			<groupId>org.apache.maven.plugins</groupId>
