--- a/Backend/ShoesCustom/ShoesPee/ShoesPee/src/main/resources/application.properties
+++ b/Backend/ShoesCustom/ShoesPee/ShoesPee/src/main/resources/application.properties
@@ -28,3 +28,11 @@ application.security.jwt.refresh-token.expiration=604800000
 allowed.origin=http://localhost:8080
 
 logging.level.org.springframework.security=DEBUG
+# The path to the keystore containing the SSL certificate
+server.ssl.key-store=classpath:javatechie.jks
+# The password used to generate the keystore
+server.ssl.key-store-password=130224
+# The alias of the certificate in the keystore
+server.ssl.key-alias=shoepee-https
+# The password for the key itself (if different from the keystore password)
+server.ssl.key-password=130224
