--- a/Backend/ShoesCustom/ShoesPee/ShoesPee/src/main/resources/application.properties
+++ b/Backend/ShoesCustom/ShoesPee/ShoesPee/src/main/resources/application.properties
@@ -36,3 +36,11 @@ server.ssl.key-store-password=130224
 server.ssl.key-alias=shoepee-https
 # The password for the key itself (if different from the keystore password)
 server.ssl.key-password=130224
+# The path to the keystore containing the SSL certificate
+server.ssl.key-store=classpath:javatechie.jks
+# The password used to generate the keystore
+server.ssl.key-store-password=130224
+# The alias of the certificate in the keystore
+server.ssl.key-alias=shoepee-https
+# The password for the key itself (if different from the keystore password)
+server.ssl.key-password=130224
