--- a/.github/workflows/CI-CD-BE.yml
+++ b/.github/workflows/CI-CD-BE.yml
@@ -28,23 +28,10 @@ jobs:
       - name: Build project with Maven
         run: mvn -B package --file Backend/ShoesCustom/ShoesPee/ShoesPee/pom.xml
 
-- name: Cache
-  uses: actions/cache@v3.3.2
-  with:
-    # A list of files, directories, and wildcard patterns to cache and restore
-    path: 
-    # An explicit key for restoring and saving the cache
-    key: 
-    # An ordered list of keys to use for restoring stale cache if no cache hit occurred for key. Note `cache-hit` returns false in this case.
-    restore-keys: # optional
-    # The chunk size used to split up large files during upload, in bytes
-    upload-chunk-size: # optional
-    # An optional boolean when enabled, allows windows runners to save or restore caches that can be restored or saved respectively on other platforms
-    enableCrossOsArchive: # optional, default is false
-    # Fail the workflow if cache entry is not found
-    fail-on-cache-miss: # optional, default is false
-    # Check if a cache entry exists for the given input(s) (key, restore-keys) without downloading the cache
-    lookup-only: # optional, default is false
+- name: action-maven
+  # You may pin to the exact commit or the version.
+  # uses: comchangs/action-maven@54db702e085ac767dad94c87e84499afb9d77162
+  uses: comchangs/action-maven@v0.4-beta
       
       # - name: Distribute jar-war file 
       #   run: mkdir staging && cp target/*.jar staging     
