--- a/Backend/ShoesCustom/ShoesPee/ShoesPee/src/main/resources/application.properties
+++ b/Backend/ShoesCustom/ShoesPee/ShoesPee/src/main/resources/application.properties
@@ -47,3 +47,8 @@ server.ssl.key-store-password=130224
 server.ssl.key-alias=shoepee-https
 # The password for the key itself (if different from the keystore password)
 server.ssl.key-password=130224
+
+
+spring.thymeleaf.enabled=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
