"version FINAL of final 2"

--- a/Backend/ShoesCustom/ShoesPee/ShoesPee/pom.xml
+++ b/Backend/ShoesCustom/ShoesPee/ShoesPee/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>shoepee</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ShoesPee</name>
-	<description>Project service shoes</description>
+	<description>Project service customizedShoes</description>
 	<properties>
 		<java.version>20</java.version>
 	</properties>
