--- a/Backend/ShoesCustom/ShoesPee/ShoesPee/src/main/resources/application.properties
+++ b/Backend/ShoesCustom/ShoesPee/ShoesPee/src/main/resources/application.properties
@@ -40,15 +40,15 @@ server.ssl.key-alias=shoepee-https
 # The password for the key itself (if different from the keystore password)
 server.ssl.key-password=130224
 # The path to the keystore containing the SSL certificate
-server.ssl.key-store=classpath:javatechie.jks
-# The password used to generate the keystore
-server.ssl.key-store-password=130224
-# The alias of the certificate in the keystore
-server.ssl.key-alias=shoepee-https
-# The password for the key itself (if different from the keystore password)
-server.ssl.key-password=130224
+#server.ssl.key-store=classpath:javatechie.jks
+## The password used to generate the keystore
+#server.ssl.key-store-password=130224
+## The alias of the certificate in the keystore
+#server.ssl.key-alias=shoepee-https
+## The password for the key itself (if different from the keystore password)
+#server.ssl.key-password=130224
 
 
-spring.thymeleaf.enabled=true
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
+#spring.thymeleaf.enabled=true
+#spring.thymeleaf.prefix=classpath:/templates/
+#spring.thymeleaf.suffix=.html
