"version FINAL of final 4"

--- a/Backend/ShoesCustom/ShoesPee/ShoesPee/src/main/resources/application.properties
+++ b/Backend/ShoesCustom/ShoesPee/ShoesPee/src/main/resources/application.properties
@@ -52,3 +52,5 @@ server.ssl.key-password=130224
 #spring.thymeleaf.enabled=true
 #spring.thymeleaf.prefix=classpath:/templates/
 #spring.thymeleaf.suffix=.html
+# application.properties
+spring.jackson.time-zone=Asia/Ho_Chi_Minh
